--- a/Glimma_c14d_green_v2.html
+++ b/Glimma_c14d_green_v2.html
@@ -3,8 +3,8 @@
 <meta charset='utf-8' />
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 <head>
-	<script src='js/glimma.min.js'></script>
-	<link rel='stylesheet' href='css/glimma.min.css'>
+	<script src='glimma.min.js'></script>
+	<link rel='stylesheet' href='glimma.min.css'>
 	<title>Glimma Plots</title>
 	<script>
 		function clickAdjPval() {
@@ -16,7 +16,7 @@
 <body onload=clickAdjPval()>
 	<div class='container'>
 	</div>
-	<script src='js/Glimma_c14d_green_v3.js'></script>
+	<script src='Glimma_c14d_green_v3.js'></script>
 	<script>
 		glimma.init.processCharts();
 		glimma.init.processTables();
